title and favicon updated

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title> Eamin | Portfolio</title>
+  <meta content="author" name="Eshan Ariyan Eamin">
+  <meta content="seo" name="portfolio, eamin22, global university bangladesh, ">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="https://scontent.fdac157-1.fna.fbcdn.net/v/t1.6435-9/132430033_1050890568711880_1512129480276798455_n.jpg?stp=dst-jpg_s851x315&_nc_cat=105&ccb=1-7&_nc_sid=da31f3&_nc_eui2=AeFxaVOke4ce9qs43tGCczT03DDDmAlR3N_cMMOYCVHc3_wpZJfq3gNL_3s9-bIDoteuiYN11jByUkJqAkHLPTdT&_nc_ohc=H4kGNdowwjkAX9tpu_1&_nc_ht=scontent.fdac157-1.fna&oh=00_AfA8lzydzNGrlgHUlrC49DAcuAk98fXVNERt2ehxyxhRTQ&oe=638A4667" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
