--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 
   <title> Eamin | Portfolio</title>
   <meta content="author" name="Eshan Ariyan Eamin">
+  <meta content="seo" name="portfolio, eamin22, global university bangladesh, ">
 
   <!-- Favicons -->
-  <link href="https://scontent.fdac157-1.fna.fbcdn.net/v/t1.6435-9/132430033_1050890568711880_1512129480276798455_n.jpg?stp=dst-jpg_s851x315&_nc_cat=105&ccb=1-7&_nc_sid=da31f3&_nc_eui2=AeFxaVOke4ce9qs43tGCczT03DDDmAlR3N_cMMOYCVHc3_wpZJfq3gNL_3s9-bIDoteuiYN11jByUkJqAkHLPTdT&_nc_ohc=H4kGNdowwjkAX9tpu_1&_nc_ht=scontent.fdac157-1.fna&oh=00_AfA8lzydzNGrlgHUlrC49DAcuAk98fXVNERt2ehxyxhRTQ&oe=638A4667" rel="icon">
+  <link href="./assets/img/favicon.jpg" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -43,14 +45,14 @@
       <div class="d-flex flex-column">
 
         <div class="profile">
-          <img src="./assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-          <h1 class=""><a href="./index.html">Alex Smith</a></h1>
+          <img src="./assets/img/profile.JPG" alt="" class="img-fluid rounded-circle">
+          <h1 class=""><a href="./index.html">Ariyan Eamin</a></h1>
           <div class="social-links mt-3 text-center">
-            <a href="twitter"><i class="bx bxl-twitter"></i></a>
-            <a href="facebook"><i class="bx bxl-facebook"></i></a>
-            <a href="instagram"><i class="bx bxl-instagram"></i></a>
-            <a href="skype"><i class="bx bxl-skype"></i></a>
-            <a href="linkedin"><i class="bx bxl-linkedin"></i></a>
+            <a href="https://twitter.com/EshanEamin"><i class="bx bxl-twitter"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100013728390974"><i class="bx bxl-facebook"></i></a>
+            <a href="https://www.instagram.com/eshan_ariyan_eamin/?hl=en"><i class="bx bxl-instagram"></i></a>
+            <a href="https://join.skype.com/invite/vma6hAnBbSMm"><i class="bx bxl-skype"></i></a>
+            <a href="https://www.linkedin.com/in/eamin-chad-shohak-937539255/"><i class="bx bxl-linkedin"></i></a>
           </div>
         </div><!-- profile End-->
 
@@ -71,7 +73,7 @@
   <!-- ======= Hero Section======= -->
   <section id="hero" class="hero d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Alex Smith</h1>
+      <h1>Ariyan Eamin....</h1>
       <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
     </div>
   </section>
@@ -90,7 +92,7 @@
         <div class="row"><!-- About section -->
 
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="./assets/img/profile-img.jpg" alt="" class="img-fluid">
+            <img src="./assets/img/profile.JPG" alt="" class="img-fluid">
           </div>
 
           <div class="content col-lg-8 pt-4 pt-lg-0" data-aos="fade-left">
@@ -103,17 +105,17 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>30 Nov 2000</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://helloeamin.me/</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+88 01312 965365</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Barishal, Bangladesh</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.Sc in CSE</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>mde4182@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -143,29 +145,29 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span class="purecounter" data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1"></span>
-              <p><strong>Happy Clients</strong> consequntur quae</p>
+              <span class="purecounter" data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1"></span>
+              <p><strong>Happy Clients</strong></p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span class="purecounter" data-purecounter-start="232" data-purecounter-end="521" data-purecounter-duration="1"></span>
-              <p><strong>Projects</strong> adipisci atque cum quia aut</p>
+              <span class="purecounter" data-purecounter-start="5" data-purecounter-end="30" data-purecounter-duration="1"></span>
+              <p><strong>Projects</strong></p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="bi bi-headset"></i>
-              <span class="purecounter" data-purecounter-start="521" data-purecounter-end="1453" data-purecounter-duration="1"></span>
-              <p><strong>Hours of Support</strong> aut commodi quaerat</p>
+              <span class="purecounter" data-purecounter-start="30" data-purecounter-end="145" data-purecounter-duration="1"></span>
+              <p><strong>Hours of Support</strong></p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="bi bi-people"></i>
-              <span class="purecounter" data-purecounter-start="1453" data-purecounter-end="32" data-purecounter-duration="1"></span>
-              <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
+              <span class="purecounter" data-purecounter-start="145" data-purecounter-end="4" data-purecounter-duration="1"></span>
+              <p><strong>Hard Workers</strong></p>
             </div>
           </div>
         </div><!--row no-gutters End-->
@@ -248,12 +250,12 @@
             <!--resume-title-->
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Alex Smith</h4>
+              <h4>Ariyan Eamin</h4>
               <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Barishal, Bangladeshh</li>
+                <li>193-011-009</li>
+                <li>mde4182@gmail.com</li>
               </ul>
             </div><!--End resume title-->
             <!--resume-title-->
@@ -562,22 +564,22 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Global University Bangladesh,<br> Barishal, BN Tower.</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>mde4182@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p> 
+                <p>+88 01312 965363</p> 
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d117788.28277733614!2d90.28376323632496!3d22.69536786123804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x37553407fbece487%3A0x5d069b9599d4414a!2sBarishal%2C%20Bangladesh!5e0!3m2!1sen!2sbg!4v1667426477868!5m2!1sen!2sbg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
 
