--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-  
+
+  <!-- =======================================================
+  * Template Name: iPortfolio - v3.9.1
+  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
 </head>
 
 <body>
@@ -39,14 +45,14 @@
       <div class="d-flex flex-column">
 
         <div class="profile">
-          <img src="./assets/img/profile.JPG" alt="" class="img-fluid rounded-circle">
+          <img src="./assets/img/profile.JPG" alt="" class=" rounded-circle">
           <h1 class=""><a href="./index.html">Ariyan Eamin</a></h1>
           <div class="social-links mt-3 text-center">
-            <a href="https://twitter.com/EshanEamin"><i class="bx bxl-twitter"></i></a>
-            <a href="https://www.facebook.com/profile.php?id=100013728390974"><i class="bx bxl-facebook"></i></a>
-            <a href="https://www.instagram.com/eshan_ariyan_eamin/?hl=en"><i class="bx bxl-instagram"></i></a>
-            <a href="https://join.skype.com/invite/vma6hAnBbSMm"><i class="bx bxl-skype"></i></a>
-            <a href="https://www.linkedin.com/in/eamin-chad-shohak-937539255/"><i class="bx bxl-linkedin"></i></a>
+            <a target="_blank" href="https://twitter.com/EshanEamin"><i class="bx bxl-twitter"></i></a>
+            <a target="_blank" href="https://www.facebook.com/profile.php?id=100013728390974"><i class="bx bxl-facebook"></i></a>
+            <a target="_blank" href="https://www.instagram.com/eshan_ariyan_eamin/?hl=en"><i class="bx bxl-instagram"></i></a>
+            <a target="_blank" href="https://join.skype.com/invite/vma6hAnBbSMm"><i class="bx bxl-skype"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/in/eamin-chad-shohak-937539255/"><i class="bx bxl-linkedin"></i></a>
           </div>
         </div><!-- profile End-->
 
