--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
                 <p>+88 01312 965363</p> 
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d117788.28277733614!2d90.28376323632496!3d22.69536786123804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x37553407fbece487%3A0x5d069b9599d4414a!2sBarishal%2C%20Bangladesh!5e0!3m2!1sen!2sbg!4v1667426477868!5m2!1sen!2sbg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe class="img-fluid" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d117788.28277733614!2d90.28376323632496!3d22.69536786123804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x37553407fbece487%3A0x5d069b9599d4414a!2sBarishal%2C%20Bangladesh!5e0!3m2!1sen!2sbg!4v1667426477868!5m2!1sen!2sbg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
 
